# ai-resume-screener-bmad

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  conftest.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logging.py  scheduler.py  security.py
backend/app/db/: database.py  dependencies.py
backend/app/models/: candidate_note.py  job_description.py  resume_analysis.py  user.py
backend/app/routers/: analyses.py  auth.py  candidates.py  job_descriptions.py  users.py
backend/app/schemas/: analysis.py  auth.py  candidate.py  job_description.py  user.py
backend/app/services/: analysis_service.py  auth_service.py  gdpr_service.py  gemini_service.py  job_description_service.py  seed_service.py
backend/app/tests/: test_admin_delete_candidate.py  test_analyses_history.py  test_analyses_stream.py  test_analyses_upload.py  test_auth.py  test_auth_guards.py  test_candidates.py  test_config.py  test_database.py  test_gdpr_service.py  test_gemini_service.py  test_job_descriptions.py  test_logging.py  test_main.py  test_resume_analysis_model.py  test_security.py  test_seed_service.py  test_users.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: analyses.ts  auth.ts  candidates.ts  job_descriptions.ts  users.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAnalysisStream.ts  useAuth.ts
frontend/src/pages/: AdminPage.tsx  AnalysisPage.tsx  CandidatesPage.test.tsx  CandidatesPage.tsx  (+6 more)
(+28 files in other folders)
